<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Prediabetics">

        <LinearLayout
            android:layout_margin="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:textColor="#000000"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="DiaDiagnosis"/>
    <ExpandableListView
        android:id="@+id/expandableListViewSample"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.5dp"
        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Treatment"/>

                <TextView
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:text="@string/text_hear"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_margin="8dp"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:text="@string/text_sub"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_margin="8dp"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:text="@string/text_1"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_margin="8dp"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:text="@string/text_2"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_margin="8dp"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:text="@string/text_3"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_margin="8dp"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:text="@string/text_4"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_margin="8dp"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:text="@string/text_5"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Diet"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:text="10 Best Food For Pre Diabetics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"/>

                    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                        android:id="@+id/youtube_player_view1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:autoPlay="false" />

                    <TextView
                        android:text="Best Food For Pre Diabetics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"/>

                    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                        android:id="@+id/youtube_player_view2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:autoPlay="false" />

                    <TextView
                        android:text="Best Food For Pre Diabetics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"/>

                    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                        android:id="@+id/youtube_player_view3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:autoPlay="false" />

                    <TextView
                        android:text="Pre Diabetics Exercise"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"/>

                    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                        android:id="@+id/youtube_player_view4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:autoPlay="false" />

                    <TextView
                        android:text="Pre Diabetics Exercise"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"/>

                    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                        android:id="@+id/youtube_player_view5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:autoPlay="false" />


                </LinearLayout>



            </LinearLayout>


        </LinearLayout>





</ScrollView>